# tennis_bot_vf

./: .env.example  .gitignore  .~lock.oraclessh.key#  CONTRIBUTING.md  Dockerfile  Dockerfile.monitor  README.md  architecture.md  config.py  database.py  docker-compose.yml  logger.py  main.py  migrate_players.py  pyproject.toml  run_monitor.py
.ai/: RULES.md  agent_definitions.yaml  context_config.yaml
.githooks/: pre-commit
collector/: __init__.py
dashboard/: __init__.py
docs/: code_index.md  database.md  project_state.md
finalizer/: __init__.py  service.py  stats.py  telegram.py  validation.py
incidents/: __init__.py  config.py  models.py  monitor.py  notifier.py  package_generator.py  recovery.py  service.py  telegram_bot.py
live_collector/: __init__.py  betting_live.py  flashscore_live.py  service.py
models/: bettingsite.py  completed_match.py  flashscore.py  live_odds.py  live_score.py  player.py  tracked_match.py
monitor/: tennis_bot_monitor.py
observability/: __init__.py  api.py  config.py  incident_integration.py  logging.py  match_monitor.py  metrics.py  models.py  service_monitor.py  telegram_diagnostics.py  tracing.py  utils.py
orchestrator/: service.py
registry/: __init__.py  service.py
replay/: __init__.py
research/: __init__.py
scripts/: dependency_graph.py  generate_feature_context.py  generate_incident_package.py  update_architecture.py  update_code_index.py  validate_module_boundaries.py
shared/: httpx_client.py  notify.py
tests/: conftest.py  test_bettingsite_collector.py  test_config.py  test_database.py  (+7 more)
(+44 files in other folders)
