[project]
name = "sports-trading"
version = "0.1.0"
description = "Sports Trading Platform V3"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "playwright>=1.50",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sports_trading*", "collector*", "models*", "registry*", "orchestrator*", "live_collector*", "finalizer*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
